<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calcu_V1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="oper1">Operando 1</string>
    <string name="oper2">Operando 2</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="multi">*</string>
    <string name="divi">/</string>
    <string name="num_0">0</string>

</resources>
